--- a/src/app/shared/components/dynamic-select/dynamic-select.component.scss
+++ b/src/app/shared/components/dynamic-select/dynamic-select.component.scss
@@ -42,6 +42,11 @@
   }
 }
 
+// ::ng-deep .mat-form-field-invalid.mat-form-field-appearance-outline .mat-form-field-outline {
+//   color: red;
+//   border-color: red !important;
+// }
+
 .select-container {
   display: flex;
   align-items: center;
