--- a/src/app/pages/companies/companies.component.html
+++ b/src/app/pages/companies/companies.component.html
@@ -1,3 +1,4 @@
+<h3>Empresas:</h3>
 <app-dynamic-table [headers]="headers" [data]="companies" [actions]="['edit', 'delete']" (edit)="updateDocument($event)"
     (delete)="deleteDocument($event)">
 </app-dynamic-table>
