--- a/src/app/shared/components/rich-text/rich-text.component.scss
+++ b/src/app/shared/components/rich-text/rich-text.component.scss
@@ -47,6 +47,7 @@
 /* Resto do seu CSS existente permanece igual */
 .quill-editor {
   width: 100%;
+  background-color: white;
 }
 
 .editor-controls {
