--- a/src/app/shared/components/dynamic-table/dynamic-table.component.scss
+++ b/src/app/shared/components/dynamic-table/dynamic-table.component.scss
@@ -99,3 +99,11 @@ mat-paginator {
   width: 100%; /* <- faz a paginação seguir a largura da tabela */
 }
 
+.body-row {
+  cursor: pointer;
+  
+  &:hover {
+    background-color: #f5f5f5;
+  }
+}
+
