--- a/src/app/shared/components/holiday-calendar/holiday-calendar.component.html
+++ b/src/app/shared/components/holiday-calendar/holiday-calendar.component.html
@@ -1,9 +1,10 @@
+<h3><mat-icon class="title-icon">calendar_today</mat-icon>
+    {{ 'calendar.calendar-title' | translate }} </h3>
 <mat-card class="calendar-card">
     <mat-card-header class="calendar-header">
-        <mat-card-title class="calendar-title"> 
-            <mat-icon class="title-icon">calendar_today</mat-icon>
-            {{ 'calendar.calendar-title' | translate }} 
-        </mat-card-title>
+        <!-- <mat-card-title class="calendar-title"> 
+            
+        </mat-card-title> -->
         <mat-card-subtitle class="calendar-subtitle">
             {{ 'calendar.calendar-subtitle' | translate }}
         </mat-card-subtitle>
